[gd_scene load_steps=4 format=2]

[ext_resource path="res://Server/Server.gd" type="Script" id=2]
[ext_resource path="res://old/LoginUI.gd" type="Script" id=3]
[ext_resource path="res://old/RegisterUI.gd" type="Script" id=4]

[node name="Server" type="Node"]
script = ExtResource( 2 )

[node name="Login" type="NinePatchRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
region_rect = Rect2( 907, 99, 0, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Login"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -300.0
margin_right = 100.0
margin_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Login/VBoxContainer"]
margin_top = 232.0
margin_right = 200.0
margin_bottom = 246.0
text = "Login:"

[node name="LineEdit" type="LineEdit" parent="Login/VBoxContainer"]
margin_top = 250.0
margin_right = 200.0
margin_bottom = 274.0
placeholder_text = "username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit2" type="LineEdit" parent="Login/VBoxContainer"]
margin_top = 278.0
margin_right = 200.0
margin_bottom = 302.0
placeholder_text = "password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Login/VBoxContainer"]
margin_top = 306.0
margin_right = 200.0
margin_bottom = 326.0
text = "Login"

[node name="Button2" type="Button" parent="Login/VBoxContainer"]
margin_top = 330.0
margin_right = 200.0
margin_bottom = 350.0
text = "Register"

[node name="Label2" type="Label" parent="Login/VBoxContainer"]
margin_top = 354.0
margin_right = 200.0
margin_bottom = 368.0

[node name="Register" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Register"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -300.0
margin_right = 100.0
margin_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Register/VBoxContainer"]
margin_top = 181.0
margin_right = 202.0
margin_bottom = 195.0
text = "Register:"

[node name="LineEdit" type="LineEdit" parent="Register/VBoxContainer"]
margin_top = 199.0
margin_right = 202.0
margin_bottom = 223.0
placeholder_text = "username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit2" type="LineEdit" parent="Register/VBoxContainer"]
margin_top = 227.0
margin_right = 202.0
margin_bottom = 251.0
placeholder_text = "password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit3" type="LineEdit" parent="Register/VBoxContainer"]
margin_top = 255.0
margin_right = 202.0
margin_bottom = 279.0
placeholder_text = "password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit4" type="LineEdit" parent="Register/VBoxContainer"]
margin_top = 283.0
margin_right = 202.0
margin_bottom = 307.0
placeholder_text = "email"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="Register/VBoxContainer"]
margin_top = 311.0
margin_right = 202.0
margin_bottom = 335.0
text = "agree with terms of service"

[node name="Button" type="Button" parent="Register/VBoxContainer"]
margin_top = 339.0
margin_right = 202.0
margin_bottom = 359.0
disabled = true
text = "Create Account"

[node name="Button2" type="Button" parent="Register/VBoxContainer"]
margin_top = 363.0
margin_right = 202.0
margin_bottom = 383.0
text = "Back to Login"

[node name="Label2" type="Label" parent="Register/VBoxContainer"]
margin_top = 387.0
margin_right = 202.0
margin_bottom = 401.0

[node name="Label3" type="Label" parent="Register/VBoxContainer"]
margin_top = 405.0
margin_right = 202.0
margin_bottom = 419.0
[connection signal="button_down" from="Login/VBoxContainer/Button" to="Login" method="_on_Button_button_down"]
[connection signal="button_down" from="Login/VBoxContainer/Button2" to="Login" method="_on_Button2_button_down"]
[connection signal="toggled" from="Register/VBoxContainer/CheckBox" to="Register" method="_on_CheckBox_toggled"]
[connection signal="button_down" from="Register/VBoxContainer/Button" to="Register" method="_on_Button_button_down"]
[connection signal="button_down" from="Register/VBoxContainer/Button2" to="Register" method="_on_Button2_button_down"]
